[build-system]
requires = [
    "setuptools >= 45.0",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
target-version = ["py35", "py36", "py37", "py38", "py39", "py310", "py311"]

[tool.tox]
legacy_tox_ini = """
[testenv]
commands = coverage run -m unittest discover --start-directory tests
deps =
    coverage >= 5.5, <7
[tox]
envlist = py35,py36,py37,py38,py39,py310,py311,pypy38,pypy39
skip_missing_interpreters = true
"""
